# INDENG-290

./: .gitignore  Brent Oil Futures Historical Data.csv  Brent Oil.xls  CPI.xlsx  EIA prediction.csv  EXchangeRate.xls  Energy_Proposal_revised(1).docx  Energy_Proposal_revised(2).docx  Energy_Proposal_revised.docx  GDP.xlsx  IR.xlsx  Inflation.xls  Professor_Progress_Report.docx  Progress_Report.docx  README.md  energy_project_notebook_converted.py  pyproject.toml  中文报告草稿.md
.pytest_cache/v/cache/: nodeids
data/: README.md
data/processed/: actual_brent_annual.csv  annual_cpi.csv  benchmark_metrics.csv  bias_corrected_eia_predictions.csv  bias_corrected_metrics.csv  cpi_brent_relationship.csv  cpi_brent_summary.csv  eia_brent_forecasts.csv  release_month_features.csv  rolling_model_metrics.csv  rolling_model_predictions.csv
data/raw/eia/: README.md  aeo_2013_table12.xlsx  aeo_2014_table12.xlsx  aeo_2015_table12.xlsx  aeo_2016_table12.xlsx  (+8 more)
outputs/: README.md  analysis_outputs.xlsx  oil_forecast_evaluation_presentation.pptx  project_summary.md
reports/: INDENG-290-Final-Report-30-page-draft.docx  INDENG-290-Final-Report-30-page-draft.md  final_project_report.md
results/: summary.json
scripts/: generate_presentation.py  generate_professor_report.py  generate_report_flowchart.py  run_pipeline.py
src/: README.md
src/oil_forecast_project/: __init__.py  config.py  datasets.py  io.py  pipeline.py
src/oil_forecast_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_additional.py  test_datasets.py  test_metrics.py
(+12 files in other folders)
